--- a/README
+++ b/README
@@ -56,6 +56,7 @@ Requirements (when not using Docker)
 
   util/vndb.pl:
     Algorithm::Diff::XS
+    Text::MultiMarkdown
     TUWF
     HTTP::Server::Simple (optional, but greatly simplifies development setup)
     FCGI                 (optional, for running as a FastCGI script)
